a customer can now view his favorite coffees and navigate to them or their corresponding coffeeshops #64

--- a/CoffeeFinder/templates/CoffeeFinderApp/map.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/map.html
@@ -171,6 +171,7 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
+                <li><a href="/CoffeeFinderApp/view_favorites/">View Favorites</a>
                 {% else %}
                 <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
                 <li><a href="/CoffeeFinderApp/register/">Register</a></li>
