Added to navigation bar of all pages view my order

--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -180,6 +180,7 @@ function initialize() {
               <ul class="site-navigation">
                 <li class="active"><a href="/CoffeeFinderApp/page_list/">Find A CoffeeShop</a>
                 </li>
+                <li><a href="/CoffeeFinderApp/VIEW_ORDER/">View My Orders</a></li>
                 <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
                 </li>
                 {% if user.is_authenticated %}
