--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -143,11 +143,8 @@
                 <div id="home" style="background-image: url('{% static "/static/images/background/pageList2.jpg" %}'); width: 100%; height: 95%;" class="parallax hidden-xs">
                     <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
                         <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
-<<<<<<< HEAD
                         <br><br>
                         <!--<h4 style="top: 55%; left: 35%;" class="style-2 ls-l text-center">{{ page.description }}</h4>-->
-=======
->>>>>>> 68ed63d40b6b67d0886bb5fff9ef5aa0f78d82d8
                     </div>
                 </div>
           
@@ -285,22 +282,22 @@
             <div class="row">
               <div class="col-md-4 col-sm-6">
                   {% if user.is_authenticated %}
-                  <h5> Upload an Image of our CoffeeShop</h5>
-        <!-- Upload form. Note enctype attribute! -->
-            <form action="{% url "uploadImage" %}" method="post" class="box" enctype="multipart/form-data">
-                {% csrf_token %}
-                <p>{{ form.non_field_errors }}</p>
-                <p>{{ form.image.label_tag }} {{ form.image.help_text }}</p>
-                <p>
-                    {{ form.image.errors }}
-                    {{ form.image }}
-                </p>
-                <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} 
-                <input hidden id="page" size="20" type="text" name="page" value={{ page.id }}  >
-                <input hidden id="user" size="20" type="text" name="user" value={{ user_id }}  >
-                <p><input type="submit" value="Upload" class="btn md" /></p>
-            </form>
-        {% endif %}
+                     <h5> Upload an Image of our CoffeeShop</h5>
+                  <!-- Upload form. Note enctype attribute! -->
+                      <form action="{% url "uploadImage" %}" method="post" class="box" enctype="multipart/form-data">
+                          {% csrf_token %}
+                          <p>{{ form.non_field_errors }}</p>
+                          <p>{{ form.image.label_tag }} {{ form.image.help_text }}</p>
+                          <p>
+                              {{ form.image.errors }}
+                              {{ form.image }}
+                          </p>
+                          <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} 
+                          <input hidden id="page" size="20" type="text" name="page" value={{ page.id }}  >
+                          <input hidden id="user" size="20" type="text" name="user" value={{ user_id }}  >
+                          <p><input type="submit" value="Upload" class="btn md" /></p>
+                      </form>
+                  {% endif %}
       </div>
       </div>
         </div>
@@ -324,6 +321,9 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
+                 {% if user.is_superuser %}
+                <li><a href="/CoffeeFinderApp/requests/">Requests</a></li>
+                {% endif %}
                 {% else %}
                 <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
                 <li><a href="/CoffeeFinderApp/register/">Register</a></li>
