--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -184,6 +184,9 @@ function initialize() {
                 </li>
                 {% if user.is_authenticated %}
                 <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
+                 {% if user.is_superuser %}
+                <li><a href="/CoffeeFinderApp/requests/">Requests</a></li>
+                {% endif %}
                 {% else %}
                 <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
                 <li><a href="/CoffeeFinderApp/register/">Register</a></li>
