--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -143,11 +143,10 @@
                 <div id="home" style="background-image: url('{% static "/static/images/background/pageList2.jpg" %}'); width: 100%; height: 95%;" class="parallax hidden-xs">
                     <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
                         <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
-<<<<<<< HEAD
+
                         <br><br>
                         <!--<h4 style="top: 55%; left: 35%;" class="style-2 ls-l text-center">{{ page.description }}</h4>-->
-=======
->>>>>>> 68ed63d40b6b67d0886bb5fff9ef5aa0f78d82d8
+
                     </div>
                 </div>
           
@@ -274,6 +273,16 @@
                                     <h5><i class="fa fa-user"></i>  Posted by <span class="color">{{ image.user }}</span></li></h5>
                               </div>
                             </div>
+                            {% if user.is_authenticated %}
+                                <form action="{%url "LikeImage"%}" method="post">
+                                  {% csrf_token %}                                
+                                    {% if flag %}              
+                                      <input size="20" type="button" name="Like" value="this is Liked">
+                                    {% else %}
+                                      <input size="20" type="button" name="Like" value="Like" >
+                                    {% endif %}
+                                </form>
+                            {% endif %}
                         </article>
                     {% endfor %}
                 {% else %}
@@ -295,7 +304,7 @@
                     {{ form.image.errors }}
                     {{ form.image }}
                 </p>
-                <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} 
+                <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} >
                 <input hidden id="page" size="20" type="text" name="page" value={{ page.id }}  >
                 <input hidden id="user" size="20" type="text" name="user" value={{ user_id }}  >
                 <p><input type="submit" value="Upload" class="btn md" /></p>
