--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -183,6 +183,7 @@ function initialize() {
                 <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
                 </li>
                 {% if user.is_authenticated %}
+                <li><a href="/CoffeeFinderApp/view_favorites/">View Favorites</a>
                 <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
                 {% else %}
                 <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
