--- a/CoffeeFinder/templates/CoffeeFinderApp/view_favorites.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/view_favorites.html
@@ -177,7 +177,7 @@
                   </g>
                 </g>
               </svg>
-              <h2 id="pizzas" class="section-heading text-center">Our menu</h2>
+              <h2 id="pizzas" class="section-heading text-center">Your Favorite Coffees</h2>
             </div>
           </div>
           <div class="row">
@@ -190,7 +190,7 @@
                         {% if items %}
                             {% for item in items %}
                               <div class="food-item price-right">
-                              <h3 style="font-size: 30px"><a href="/CoffeeFinderApp/coffee_item_page/{{ coffee_item.id }}">{{ item.name}}</a></h3>   
+                              <h3 style="font-size: 30px"><a href="/CoffeeFinderApp/coffee_item_page/{{ item.id }}">{{ item.name}}</a></h3>   
                               <h4><span style="font-family:Times New Roman; font-style: normal; font-size: 23px">{{ item.description }}</span>
                                   {% for page in pages %}
                                     {% if forloop.counter == forloop.parentloop.counter %}
@@ -222,46 +222,7 @@
        
       </section>
 
-      <section class="style-2">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="126px" height="112px" viewBox="0 0 126 112" enable-background="new 0 0 126 112" xml:space="preserve" class="mini-logo">
-                <g>
-                  <g>
-                    <g>
-                      <path d="M63.016,1.134C55.414,6.166,53.994,17.37,53,29c5.021,1.321,9.101,3.579,10.016,8.998 C63.93,32.579,68.01,30.321,73.031,29C72.037,17.37,70.617,6.166,63.016,1.134z"></path>
-                    </g>
-                  </g>
-                </g>
-                <g>
-                  <g>
-                    <g>
-                      <path d="M63.125,49.996C61.076,24.065,20.794,22.264,1,34c0,0.667,0.167,0.25,0.167,0.917C7.297,55.219,27.661,71.48,55.109,64 c-6.523,7.979,3.71,30.104-5.01,40c3.785,3.008,10.959,1.13,13.026-2.999c2.068,4.129,9.242,6.007,13.027,2.999 c-8.721-9.896,1.512-32.021-5.011-40c27.448,7.48,47.813-8.781,53.942-29.083c0-0.667,0.167-0.25,0.167-0.917 C105.457,22.264,65.175,24.065,63.125,49.996z"></path>
-                    </g>
-                  </g>
-                </g>
-                <g>
-                  <g>
-                    <g>
-                      <path d="M50,70c-25.705-1.039-29.236,20.098-34,40C31.967,101.301,53.156,97.822,50,70z"></path>
-                    </g>
-                  </g>
-                </g>
-                <g>
-                  <g>
-                    <g>
-                      <path d="M76.297,70c25.705-1.039,29.236,20.098,34,40C94.33,101.301,73.141,97.822,76.297,70z"></path>
-                    </g>
-                  </g>
-                </g>
-              </svg>
-            </div>
-          </div>
-        
-          
-        </div>
-      </section>
+      
     <header class="site-header">
         <div class="container">
           <div class="row">
@@ -280,8 +241,8 @@
                 <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
                 </li>
                 {% if user.is_authenticated %}
-                <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
                 <li><a href="/CoffeeFinderApp/view_favorites/">View Favorites</a>
+                <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
                 {% else %}
                 <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
                 <li><a href="/CoffeeFinderApp/register/">Register</a></li>
