--- a/CoffeeFinder/templates/CoffeeFinderApp/requests.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/requests.html
@@ -64,7 +64,7 @@
             <div class="col-md-12">
                 <br><br><br><br>
                 <br><br>
-              <h1 style="top: 47%; left: 50%;" class="ls-l text-center"> <span class="color">CoffeeShops </a> </span></h1>
+              <h1 style="top: 47%; left: 50%;" class="ls-l text-center"> <span class="color">Requests </a> </span></h1>
               <br>
             </div>
           </div>
