--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -90,7 +90,7 @@
 			
 
 				{% if user.is_authenticated %}
-		         <h5 class="comments-submit-title">{{username}}! Your opinion matters</h5>
+		         <h5 class="comments-submit-title">{{user.username}}! Your opinion matters</h5>
 
                   <div class="row">
                     <div class="col-sm-12">
@@ -100,10 +100,21 @@
                   </div>
                   <form action ="/CoffeeFinderApp/post_item_review/" method="post" id="reviewForm">{% csrf_token%}
 			        <br>
-			        <input size="20" type="text" name="user" value={{user_id}} hidden>
+			        <input size="20" type="text" name="user" value={{user.id}} hidden>
 	        		<input size="20" type="text" name="coffee_item" value={{coffee_item.id}} hidden >
 	        		<input size = "20" type="submit" value="Submit review" class="btn btn-md">
 			        </form>
+              <div>
+              <h6>
+                {% ifequal page.owner_id user.id %}
+                <a href="/CoffeeFinderApp/item_edit/"> Edit </a><br><br>
+                <a href="/CoffeeFinderApp/upload_to_item/"> Upload photo</a><br><br>
+                <a href="/CoffeeFinderApp/delete_photos/{{ coffee_item.id }}"> Delete associated photos </a><br><br>
+                <a href="/CoffeeFinderApp/delete/{{ coffee_item.id }}"> Delete </a><br><br>
+                {% endifequal %}
+              </h6>
+
+              </div>
               </article>
             </div>
             {% endif %}
@@ -182,7 +193,7 @@
 <br><br>
 
 
-{% ifequal page.owner username %}
+{% ifequal page.owner_id user.id %}
 <a href="/CoffeeFinderApp/item_edit/"> Edit </a><br><br>
 <a href="/CoffeeFinderApp/upload_to_item/"> Upload photo</a><br><br>
 <a href="/CoffeeFinderApp/delete_photos/{{ coffee_item.id }}"> Delete associated photos </a><br><br>
