--- a/CoffeeFinder/templates/CoffeeFinderApp/viewOrder.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/viewOrder.html
@@ -1,26 +1,194 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
-	<body>
-		<h1>View Orders</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <title>CoffeeFinder</title>
+        <link rel="shortcut icon" href="assets/images/favicon.png">
+        <!-- Including stylesheets-->
+        <link rel="stylesheet" href="{% static 'css/core.css' %}">
+        <link rel="stylesheet" href="{% static 'css/theme.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,latin-ext">
+        <link rel="stylesheet" href="{% static 'css/layerslider.css' %}">
+        <link rel="stylesheet" href="{% static 'css/prettyPhoto.css' %}">
+        <link rel="stylesheet" href="{% static 'css/colorpicker.css' %}">
+    </head>
+    <body class="menu-style-2 responsive sticky-menu">
+    <!--include colorpicker-->
+
+      <!-- Site Header -->
+      <header class="site-header">
+        <div class="container">
+          <div class="row">
+            <!-- Site Logo: change the width to fit your logo size-->
+            <div class="site-logo retina pull-left"><ul class="site-navigation"><li class="active"><a href="/CoffeeFinderApp/"> CoffeeFinder</a></li></ul></div>
+            <!-- Site Navigation-->
+            <nav role="navigation" class="navbar pull-right">
+              <!-- Site Navigation Header: this part is required and is used on mobile.-->
+              <div class="navbar-header">
+                <button type="button" data-toggle="collapse" data-target=".site-navigation" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="fa fa-bars"></span></button>
+              </div>
+              <!-- Site Navigation: main menu content-->
+              <ul class="site-navigation"> 
+                <li><a href="/CoffeeFinderApp/page_list/">Find A CoffeeShop</a>
+                </li>
+                <li><a href="/CoffeeFinderApp/VIEW_ORDER/">View My Orders</a></li>
+                <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
+                {% else %}
+                <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
+                <li><a href="/CoffeeFinderApp/register/">Register</a></li>
+                {% endif %}
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      
+        <div id="home" style="background-image: url(http://i62.tinypic.com/2gx2r6w.jpg); width: 100%; height: 862px;" class="parallax hidden-xs">
+                <section class="pizza-guy-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+                <br><br><br><br>
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="126px" height="112px" viewBox="0 0 126 112" enable-background="new 0 0 126 112" xml:space="preserve" class="mini-logo">
+                <g>
+                  <g>
+                    <g>
+                      <path d="M63.016,1.134C55.414,6.166,53.994,17.37,53,29c5.021,1.321,9.101,3.579,10.016,8.998 C63.93,32.579,68.01,30.321,73.031,29C72.037,17.37,70.617,6.166,63.016,1.134z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M63.125,49.996C61.076,24.065,20.794,22.264,1,34c0,0.667,0.167,0.25,0.167,0.917C7.297,55.219,27.661,71.48,55.109,64 c-6.523,7.979,3.71,30.104-5.01,40c3.785,3.008,10.959,1.13,13.026-2.999c2.068,4.129,9.242,6.007,13.027,2.999 c-8.721-9.896,1.512-32.021-5.011-40c27.448,7.48,47.813-8.781,53.942-29.083c0-0.667,0.167-0.25,0.167-0.917 C105.457,22.264,65.175,24.065,63.125,49.996z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M50,70c-25.705-1.039-29.236,20.098-34,40C31.967,101.301,53.156,97.822,50,70z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M76.297,70c25.705-1.039,29.236,20.098,34,40C94.33,101.301,73.141,97.822,76.297,70z"></path>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+              <h2 id="order" class="section-heading text-center">View your Orders</h2>
+              <br>
+            </div>
+          </div>
 		{% if orders %}
-			<table style="width:40%">
-			<tr>
-			<td>Name</td>
-			<td>Quantity</td>
-			<td>Price</td>
-			<td>Coffeeshop</td>
-			</tr>
+			<div class="container">
+				<div class="col-md-7">
+					<div class="col-md-offset-5">
+						<div class ="col-md-offset-1">
+							<table style="width:50%">
+								<tr>
+								<td><h5 >Coffeeshop</h5></td>
+								<td><h5 >Name</h5></td>
+								<td><h5 >Quantity</h5></td>
+								<td><h5 >Price</h5></td>
+								</tr>
 			{% for order in orders %}
-				<tr>
-				<td>{{ order.coffeeshop_item.name}}</td>
-				<td>{{ order.quantity}}</td>
-				<td>{{ order.coffeeshop_item.price}}</td>
-				<td>{{ order.coffeeshop}}</td>
-				</tr>
+								<div class ="col-mid-3">
+								<tr>
+									<td class = "text-center"><h6>{{ order.coffeeshop}}</h6></td>
+									<td class = "text-center"><h6>{{ order.coffeeshop_item.name}}</h6></td>
+									<td class = "text-center"><h6>{{ order.quantity}}</h6></td>
+									<td class = "text-center"><h6>{{ order.coffeeshop_item.price}}</h6></td>
+								</tr>	
+								</div>
 			{% endfor %}
-			</table>
+								</table>
+					
+						
+	
 		{% else %}
-				<strong>There are currently no orders.</strong>
+				<div class="col-md-14">
+					
+				<h6 class = "text-center">It's been a while since you last made an Order.. We missed you</h6>
+				
+				
+				
+				</div>
 		{% endif %}
+		</div>
+      </section>
+      </div>
+      <input id="site-url" type="hidden" value="http://anpsthemes.com/latest/HTML/kataleya/">
+      <footer class="site-footer">
+        <div class="copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6"></div>
+              <div class="col-sm-6">
+                <div class="social"><a href="#" class="fa fa-twitter"></a><a href="#" class="fa fa-facebook"></a><a href="#" class="fa fa-behance"></a><a href="#" class="fa fa-skype"></a><a href="#" class="fa fa-vimeo-square"></a><a href="#" class="fa fa-google-plus"></a><a href="#" class="fa fa-linkedin-square"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <script src="{% static 'javascript/jquery.js' %}"></script>
+      <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+      <script src="{% static 'javascript/gmap3.js' %}"></script>
+      <script src="{% static 'javascript/jquery.cookie.js' %}"></script>
+      <script src="{% static 'javascript/theme.js' %}"></script>
+      <script src="{% static 'javascript/smoothscroll.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/tab.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/collapse.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/alert.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/carousel.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/transition.js' %}"></script>
+      <script src="{% static 'javascript/jquery.touchSwipe.js' %}"></script>
+      <script src="{% static 'javascript/picturefill.js' %}" async></script>
+      <script src="{% static 'javascript/parallax.js' %}"></script>
+      <script src="{% static 'javascript/imagesloaded.js' %}"></script>
+      <script src="{% static 'javascript/isotope.js' %}"></script>
+      <script src="{% static 'javascript/jflickrfeed.js' %}"></script>
+      <script src="{% static 'javascript/jquery.prettyPhoto.js' %}"></script>
+      <!-- LayerSlider-->
+      <script src="{% static 'javascript/greensock.js' %}"></script>
+      <script src="{% static 'javascript/layerslider.transitions.js' %}"></script>
+      <script src="{% static 'javascript/layerslider.kreaturamedia.jquery.js' %}"></script>
+      <!-- Colorpicker-->
+      <script src="{% static 'javascript/colorpicker.js' %}"></script>
+      <script>
+        jQuery(function($) {
+         map('#map', '2 Elizabeth St, Melbourne', 14);
+         
+         $("#no-clutter").parallax("50%", 0.6);
+         $("#home").parallax("50%", 0.6);
+         $("#coffee-statement-1").parallax("50%", 0.6);
+         $("#pizza-statement-1").parallax("50%", 0.6);
+        });
+        
+      </script>
+      <script>
+        jQuery(function() {
+         jQuery('#home').layerSlider({
+          skin              : 'kataleya',
+          skinsPath             : 'assets/css/layerslider/skins/',
+          responsiveUnder       : 1200,
+          layersContainer   : 1200,
+          responsive            : true,
+          showCircleTimer       : false
+         });
+        });
+      </script>
+    </div>
 	</body>
+	
 </html>
